--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn==20.1.0
 click==7.1.2
 flash==1.0.3
 Flask==1.1.2
@@ -7,7 +8,6 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 protobuf==3.14.0
-PyAudio==0.2.12
 PyMySQL==1.0.2
 pytz==2021.1
 six==1.15.0
